src/app/features/tasks/task/task.component.scss
/* ... */
// SWIPE BLOCKS
.block-left,
.block-right {
  pointer-events: none;
  color: $c-contrast;
  position: absolute;
  top: 0;
  bottom: 0;
  width: 0;
  z-index: $z-swipe-block;
  transition: $transition-standard;
  border-radius: $task-border-radius;

  &.isActive {
    background-color: $c-accent;
  }

  mat-icon {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) scaleX(1);
  }
}


.block-left {
  left: 0;
}

.block-right {
  right: 0;
}

progress-bar {
  z-index: $z-progress-bar;
}


// BUTTON STYLES AND DRAG HANDLE
// -----------------------------
.toggle-sub-tasks-btn,
.first-line .ico-btn {
  $task-button-spacer: 1px;
  margin: 0 $task-button-spacer;
  padding: 0;
  z-index: $z-btn;
  @extend %standardTaskOpacityChange;

  &:hover {
    z-index: $z-btn-hover;
  }

  &:focus {
    outline: none;
  }
}

.first-line .menu-trigger {
  @include mq(xs) {
    opacity: 0;
  }
}

.first-line:hover .menu-trigger {
  @include standardTaskOpacityChange;
}

.delete-btn {
  mat-icon.delete-icon {
    color: $c-warn !important;
  }
}


.drag-handle {
  margin-left: $s;
  margin-right: 0;
  width: 40px;
  height: 40px;
  min-width: 40px;
  z-index: $z-drag-handle;
  cursor: grab;
  //display: flex;
  //justify-content: center;
  //align-items: center;
  position: relative;


  // fixes drag and drop on mobile
  touch-action: none;

  > * {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
  }


  .type-ico-wrapper {
    width: 40px;
    height: 40px;
    min-width: 40px;
    opacity: $task-icon-default-opacity;
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;

    //.first-line:hover & {
    //  opacity: .7;
    //}

    :host.isCurrent &::ng-deep mat-icon {
      transform: scale(1.4) !important;
      transform-origin: center center;
      opacity: 0.18;
    }

    @include mq(xs, max) {
      display: none;
    }

    a {
      opacity: 1;
    }
  }

  .drag-handle-ico {
    @include mq(xs) {
      opacity: 0.15;
      //.first-line:hover & {
      //opacity: 0.3;
      //}
    }
  }


  &:active {
    cursor: grabbing;
  }

  // hit area
  &:after {
    content: '';
    position: absolute;
    top: -$s*0.25;
    bottom: -$s*0.25;
    left: -$s*0.25;
    right: -$s*0.25;

    @include mq(xs) {
      top: -$s*1;
      bottom: -$s*1;
      left: -$s*1;
      right: -$s*0.5;
    }
  }
}

$this-play-size: 22px;

.play-icon-indicator {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: $c-accent;

  height: $this-play-size;
  margin-top: 1px;
  width: $this-play-size;
  font-size: $this-play-size;
  line-height: $this-play-size;
  opacity: 1 !important;
  z-index: 3;

  @include mq(xs) {
    margin-top: 0;
    //left: 10px;
  }

  .first-line:hover & {
    display: none;
  }
}


.ico-btn {
  color: inherit;

  &.mat-accent {
    color: $c-accent;
  }
}

.toggle-sub-tasks-btn,
.first-line .ico-btn {
  $task-button-spacer: 1px;
  margin: auto $task-button-spacer;
  padding: 0;
  z-index: $z-btn;

  @extend %standardTaskOpacityChange;

  &:hover {
    z-index: $z-btn-hover;
  }

  &:focus {
    outline: none;
  }
}

.toggle-sub-tasks-btn.toggle-sub-tasks-btn {
  position: absolute !important;
  transform: translateY(-50%);
  left: -24px;
  top: 50%;
  z-index: $z-toggle-sub-task-btn !important;
  min-width: 0;
  min-height: 0;
  width: 32px;
  height: 32px;
  margin-top: -1px !important;
  transform-origin: left top;
  transition-property: all;

  :host-context(.isNoTouchDevice) & {
    opacity: 0;
  }

  :host:hover & {
    opacity: 1;
  }

  mat-icon {
    transition: $transition-standard;
    margin-top: -8px;
    opacity: $task-icon-default-opacity;

    &.isHideDoneTasks {
      transform: rotate(-45deg);
    }
  }
}

.attachment-btn,
.show-additional-info-btn {
  mat-icon {
    transition: transform $transition-standard;
    backface-visibility: hidden;
  }
}

.updated-icon {
  position: absolute;
  transform: scale(1.5) translate(-50%, -50%);
  transform-origin: top left;
  top: 50%;
  left: 50%;
}


.start-task-btn {
  :host-context(.isHidePlayBtn) & {
    display: none !important;
  }
}

// ANIMATIONS ETC
// --------------
@keyframes success-btn-ani {
  0% {
    transform: scale(0.5) rotate(-180deg);
  }
  50% {
    transform: scale(1) rotate(-90deg);
  }
  100% {
    transform: scale(1) rotate(0deg);
  }
}

.isPreventPointerEventsWhilePanning {
  * {
    user-select: none !important;
    pointer-events: none !important;
    transition: none !important;
  }
}

$min-badge-size: $s*2.25;
.mini-badge {
  line-height: $min-badge-size;
  width: $min-badge-size;
  height: $min-badge-size;
  font-size: 12px;
  position: absolute;
  right: 0;
  bottom: 0;
  border-radius: 50%;
  text-align: center;
}

